fix: background content is jumping when a dialog is opened

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,7 +85,7 @@
   }
   html,
   body {
-    @apply bg-background text-foreground overflow-x-hidden;
+    @apply bg-background text-foreground;
   }
   html {
     scroll-behavior: smooth;
